# SeetaFace

FaceAlignment/: CMakeLists.txt
FaceAlignment/include/: common.h  face_alignment.h
FaceAlignment/src/: cfan.cpp  face_alignment.cpp
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/include/: classifier.h  common.h  face_detection.h  fust.h
FaceDetection/include/classifier/: lab_boosted_classifier.h
FaceDetection/src/: face_detection.cpp
FaceDetection/src/feat/: lab_feature_map.cpp
FaceDetection/src/test/: face_detection_test.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: blob.h  common.h  common_net.h  face_identification.h  hyper_param.h  math_functions.h  net.h  recognizer.h
FaceIdentification/src/: LOG.h  blob.cpp  bmat_types.h  bn_net.cpp  conv_net.cpp  eltwise_net.cpp  inner_product_net.cpp  log.cpp  math_functions.cpp  max_pooling_net.cpp  pad_net.cpp  spatial_transform_net.cpp
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp
FaceIdentification/tools/: face_identification.cpp
vc/: bzCvFaceRecog.sln  bzCvFaceRecog.vcxproj  bzCvFaceRecog.vcxproj.filters
vc/FaceRecogTest/: FaceRecogTest.vcxproj  FaceRecogTest.vcxproj.filters  main.cpp
vc/FaceRecogTest/lib/: opencv_calib3d320d.lib  opencv_core320d.lib  opencv_features2d320d.lib  opencv_flann320d.lib  opencv_highgui320d.lib  opencv_imgcodecs320d.lib  opencv_imgproc320d.lib  opencv_ml320d.lib  opencv_objdetect320d.lib  opencv_photo320d.lib  opencv_shape320d.lib  opencv_stitching320d.lib  opencv_superres320d.lib  opencv_video320d.lib  opencv_videoio320d.lib  opencv_videostab320d.lib
